use string as type id in dto classes
